--- a/views/main.ejs
+++ b/views/main.ejs
@@ -64,7 +64,7 @@
 
 <label>Search Movie</label><br>
 <input type="text" id="txtMovie" name="searchMovie"><br>
-<input type="submit" value="Submit">
+<input type="submit" id="submitbtn" value="Submit">
 
 </form>
 
@@ -75,16 +75,20 @@
         <th>Tagline</td>
     </tr>
 <% movies.forEach(function(movie){ %>
-    <tr>
+    <tr onclick = "myFunction('<%= movie.title %>')">
         <td><%= movie.id %> </td>
         <td><%= movie.title %></td>
         <td><%= movie.tagline %> </td>
-    
     </tr>
-    <% }) %>
+<% }) %>
 
 </table>
-
+<script>
+    function myFunction(x) {
+        document.getElementById("txtMovie").value = x;
+        document.getElementById("submitbtn").click();
+    }
+</script>
 </body>
 <!-- </div> -->
 </html>
