--- a/views/search.ejs
+++ b/views/search.ejs
@@ -70,13 +70,7 @@
 <form method="post" action="/movies/search/description">
     <label>Description</label>
     <input type="text" id="txtDescription" name="descriptionMovie"><br>
-    <input type="submit" value="Submit">
-</form>
-
-<form method="post" action="/movies/search/description/person">
-    <label>Person Description</label>
-    <input type="text" id="txtDescriptionPerson" name="searchPerson"><br>
-    <input type="submit" value="Submit">
+    <input type="submit" id="submitbtn" value="Submit">
 </form>
 
 <table id="table1" style="border-style:double;">
@@ -87,16 +81,22 @@
         <th>Released</td>
     </tr>
 <% moviesearch.forEach(function(search){ %>
-    <tr>
+    <tr onclick = "myFunction('<%= search.title %>')">
         <td><%= search.id %> </td>
         <td><%= search.title %></td>
         <td><%= search.tagline %> </td>
         <td> <%= search.released %> </td>
+
     </tr>
     <% }) %>
 
 </table>
-
+<script>
+        function myFunction(x) {
+            document.getElementById("txtDescription").value = x;
+            document.getElementById("submitbtn").click();
+        }
+    </script>
 </body>
 <!-- </div> -->
 </html>
