--- a/views/search.ejs
+++ b/views/search.ejs
@@ -79,24 +79,25 @@
         <th>Movie</td>
         <th>Tagline</td>
         <th>Released</td>
+        <th>Watch</th>
     </tr>
 <% moviesearch.forEach(function(search){ %>
-    <tr onclick = "myFunction('<%= search.title %>')">
+    <tr onclick = "clickFunction('<%= search.title %>')">
         <td><%= search.id %> </td>
         <td><%= search.title %></td>
         <td><%= search.tagline %> </td>
         <td> <%= search.released %> </td>
-
+        <td><button value="Watch" id="btnWatch" name="btnWatch" onclick = "">Watch</td>
     </tr>
-    <% }) %>
+<% }) %>
 
 </table>
 <script>
-        function myFunction(x) {
-            document.getElementById("txtDescription").value = x;
-            document.getElementById("submitbtn").click();
-        }
-    </script>
+    function clickFunction(x) {
+        document.getElementById("txtDescription").value = x;
+        document.getElementById("submitbtn").click();
+    }
+</script>
 </body>
 <!-- </div> -->
 </html>
