--- a/views/main.ejs
+++ b/views/main.ejs
@@ -32,7 +32,10 @@
 </style>
 <body>
 
-    <h1 id="h1">Movies <a href="/profile" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px">profile</object></a></h1>
+    <h1 id="h1">Movies 
+        <a href="/profile" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px">Profile</object></a>
+        <a href="/visualization" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px; margin-right:15px">Graph</object></a>
+    </h1>
 
 <form method="post" action="/movies/search">
     <label>Search Movie: </label>
