--- a/views/description.ejs
+++ b/views/description.ejs
@@ -1,120 +1,156 @@
 <!-- ./views/index3.ejs -->
 <html>
-    <head>
-        <title>Movie</title>
-    </head>
+
+<head>
+  <title>Movie</title>
+</head>
 <style>
-    #h1 {
-        font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-        text-align: center;
-        font-size: 300%;
-    }
-    #table1 {
-        position: absolute;
-    left:0px;
+  #h1 {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 300%;
+  }
+
+  #table1 {
+    position: absolute;
+    left: 0px;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 50%;
-    }
-    #table1 td, #table1 th {
+  }
+
+  #table1 td,
+  #table1 th {
     border: 1px solid #ddd;
     padding: 8px;
-    }
-    #table1 tr:nth-child(even){background-color: #f2f2f2;}
+  }
 
-#table1 tr:hover {background-color: #ddd;}
+  #table1 tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
-#table1 th {
+  #table1 tr:hover {
+    background-color: #ddd;
+  }
+
+  #table1 th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #4CAF50;
     color: white;
-}
+  }
 
-   #table2 {
+  #table2 {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 50%;
     position: absolute;
     right: 0px;
-    }
-    #table2 td, #table2 th {
+  }
+
+  #table2 td,
+  #table2 th {
     border: 1px solid #ddd;
     padding: 8px;
-    }
-    #table12 tr:nth-child(even){background-color: #f2f2f2;}
+  }
 
-#table2 tr:hover {background-color: #ddd;}
+  #table12 tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
-#table2 th {
+  #table2 tr:hover {
+    background-color: #ddd;
+  }
+
+  #table2 th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #4CAF50;
     color: white;
-}
-
+  }
 </style>
+
 <body>
-<!-- <div class="jumbotron text-center"> -->
-<h1 id="h1">Movies 
-    <a href="/profile" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px">Profile</object></a>
-    <a href="/visualization" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px; margin-right:15px">Graph</object></a>
-</h1>
+  <!-- <div class="jumbotron text-center"> -->
+  <h1 id="h1">Movies
+    <a href="/profile" class="btn btn-danger">
+      <span class="fa fa-gear"></span>
+      <object align="right" style="font-size:20px">Profile</object>
+    </a>
+    <a href="/visualization" class="btn btn-danger">
+      <span class="fa fa-gear"></span>
+      <object align="right" style="font-size:20px; margin-right:15px">Graph</object>
+    </a>
+  </h1>
 
-<form method="post" action="/movies/search">
+  <form method="post" action="/movies/search">
     <label>Search Movie</label>
-    <input type="text" id="txtMovie" name="searchMovie"><br>    
+    <input type="text" id="txtMovie" name="searchMovie">
+    <br>
     <input type="submit" value="Submit">
-</form>
+  </form>
 
-<form method="post" action="/movies/search/description">
+  <form method="post" action="/movies/search/description">
     <label>Description</label>
-    <input type="text" id="txtDescription" name="descriptionMovie"><br>
+    <input type="text" id="txtDescription" name="descriptionMovie">
+    <br>
     <input type="submit" value="Submit">
-</form>
+  </form>
 
-<form method="post" action="/movies/search/description/person">
+  <form method="post" action="/movies/search/description/person">
     <label>Person Description</label>
-    <input type="text" id="txtDescriptionPerson" name="searchPerson"><br>
-    <input type="submit" id="submitbtn"value="Submit">
-</form>
+    <input type="text" id="txtDescriptionPerson" name="searchPerson">
+    <br>
+    <input type="submit" id="submitbtn" value="Submit">
+  </form>
 
-<table id="table1" style="border-style:double;">
-    
+  <table id="table1" style="border-style:double;">
+
 
     <tr>
-            <td colspan="5" style="text-align: center"> <%= movieTT %> </td>
+      <td colspan="5" style="text-align: center">
+        <%= movieTT %>
+      </td>
     </tr>
     <tr>
-            <th>Name</th>
-            <th>Job</th>
-            <th>Role</th>
-            <th>Born</th>
-            
-            
-        </tr>   
-       
-        <tr>
-            <% movieDescription.forEach(function(description){ %>
-            
-            <td onclick = "clickFunction('<%= description.name %>')"> <%= description.name %> </td>
-            <td> <%= description.job %> </td>
-            <td>  <%= description.role %> </td>
-            <td>  <%= description.born %> </td>
-        </tr>
-        <% }) %>
+      <th>Name</th>
+      <th>Job</th>
+      <th>Role</th>
+      <th>Born</th>
 
 
-</table>
-<script>
+    </tr>
+
+    <tr>
+      <% movieDescription.forEach(function(description){ %>
+
+        <td onclick="clickFunction('<%= description.name %>')">
+          <%= description.name %>
+        </td>
+        <td>
+          <%= description.job %>
+        </td>
+        <td>
+          <%= description.role %>
+        </td>
+        <td>
+          <%= description.born %>
+        </td>
+    </tr>
+    <% }) %>
+
+
+  </table>
+  <script>
     function clickFunction(x) {
-        document.getElementById("txtDescriptionPerson").value = x;
-        document.getElementById("submitbtn").click();
+      document.getElementById("txtDescriptionPerson").value = x;
+      document.getElementById("submitbtn").click();
     }
-</script>
+  </script>
 
 </body>
 <!-- </div> -->
+
 </html>
