--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,110 +1,144 @@
 <!-- ./views/index2.ejs -->
 <html>
-    <head>
-        <title>Movie</title>
-    </head>
+
+<head>
+  <title>Movie</title>
+</head>
 <style>
-    #h1 {
-        font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-        text-align: center;
-        font-size: 300%;
-    }
-    #table1 {
-        position: absolute;
-    left:0px;
+  #h1 {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 300%;
+  }
+
+  #table1 {
+    position: absolute;
+    left: 0px;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 50%;
-    }
-    #table1 td, #table1 th {
+  }
+
+  #table1 td,
+  #table1 th {
     border: 1px solid #ddd;
     padding: 8px;
-    }
-    #table1 tr:nth-child(even){background-color: #f2f2f2;}
+  }
 
-#table1 tr:hover {background-color: #ddd;}
+  #table1 tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
-#table1 th {
+  #table1 tr:hover {
+    background-color: #ddd;
+  }
+
+  #table1 th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #4CAF50;
     color: white;
-}
+  }
 
-   #table2 {
+  #table2 {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 50%;
     position: absolute;
     right: 0px;
-    }
-    #table2 td, #table2 th {
+  }
+
+  #table2 td,
+  #table2 th {
     border: 1px solid #ddd;
     padding: 8px;
-    }
-    #table12 tr:nth-child(even){background-color: #f2f2f2;}
+  }
 
-#table2 tr:hover {background-color: #ddd;}
+  #table12 tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
-#table2 th {
+  #table2 tr:hover {
+    background-color: #ddd;
+  }
+
+  #table2 th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #4CAF50;
     color: white;
-}
-
+  }
 </style>
+
 <body>
-<!-- <div class="jumbotron text-center"> -->
-<h1 id="h1">Movies 
-    <a href="/profile" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px">Profile</object></a>
-    <a href="/visualization" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px; margin-right:15px">Graph</object></a>
-</h1>
+  <!-- <div class="jumbotron text-center"> -->
+  <h1 id="h1">Movies
+    <a href="/profile" class="btn btn-danger">
+      <span class="fa fa-gear"></span>
+      <object align="right" style="font-size:20px">Profile</object>
+    </a>
+    <a href="/visualization" class="btn btn-danger">
+      <span class="fa fa-gear"></span>
+      <object align="right" style="font-size:20px; margin-right:15px">Graph</object>
+    </a>
+  </h1>
 
-<form method="post" action="/movies/search">
+  <form method="post" action="/movies/search">
 
-<label>Search Movie</label>
-<input type="text" id="txtMovie" name="searchMovie"><br>
-<input type="submit" value="Submit">
+    <label>Search Movie</label>
+    <input type="text" id="txtMovie" name="searchMovie">
+    <br>
+    <input type="submit" value="Submit">
 
-</form>
-<form method="post" action="/movies/search/description">
+  </form>
+  <form method="post" action="/movies/search/description">
     <label>Description</label>
-    <input type="text" id="txtDescription" name="descriptionMovie"><br>
+    <input type="text" id="txtDescription" name="descriptionMovie">
+    <br>
     <input type="submit" id="submitbtn" value="Submit">
-</form>
+  </form>
 
-<table id="table1" style="border-style:double;">
+  <table id="table1" style="border-style:double;">
     <tr>
-        <th>ID</th>
-        <th>Movie</td>
+      <th>ID</th>
+      <th>Movie</td>
         <th>Tagline</td>
-        <th>Released</td>
-        <th>Watch</th>
+          <th>Released</td>
+            <th>Watch</th>
     </tr>
-<% moviesearch.forEach(function(search){ %>
-    <tr onclick = "clickFunction('<%= search.title %>')">
-        <td><%= search.id %> </td>
-        <td><%= search.title %></td>
-        <td><%= search.tagline %> </td>
-        <td> <%= search.released %> </td>
+    <% moviesearch.forEach(function(search){ %>
+      <tr onclick="clickFunction('<%= search.title %>')">
         <td>
-            <form method="post" action="/movies/clickWatch">
-                <button onclick = "alert('You have watched: ' + '<%= search.title %>')"  value="<%= search.title %>" name="inputClickWatch" >  Watch  </button>
-            </form>
+          <%= search.id %>
         </td>
-    </tr>
-<% }) %>
+        <td>
+          <%= search.title %>
+        </td>
+        <td>
+          <%= search.tagline %>
+        </td>
+        <td>
+          <%= search.released %>
+        </td>
+        <td>
+          <form method="post" action="/movies/clickWatch">
+            <button onclick="alert('You have watched: ' + '<%= search.title %>')" value="<%= search.title %>" name="inputClickWatch">
+            Watch </button>
+          </form>
+        </td>
+      </tr>
+      <% }) %>
 
-</table>
-<script>
+  </table>
+  <script>
     function clickFunction(x) {
-        document.getElementById("txtDescription").value = x;
-        document.getElementById("submitbtn").click();
+      document.getElementById("txtDescription").value = x;
+      document.getElementById("submitbtn").click();
     }
-</script>
+  </script>
 </body>
 <!-- </div> -->
+
 </html>
