--- a/views/search.ejs
+++ b/views/search.ejs
@@ -85,7 +85,7 @@
     </a>
   </h1>
 
-  <form method="post" action="/movies/search">
+  <form method="post" action="/">
 
     <label>Search Movie</label>
     <input type="text" id="txtMovie" name="searchMovie">
@@ -93,7 +93,7 @@
     <input type="submit" value="Submit">
 
   </form>
-  <form method="post" action="/movies/search/description">
+  <form method="post" action="/description/">
     <label>Description</label>
     <input type="text" id="txtDescription" name="descriptionMovie">
     <br>
