--- a/views/person.ejs
+++ b/views/person.ejs
@@ -85,21 +85,21 @@
     </a>
   </h1>
 
-  <form method="post" action="/movies/search">
+  <form method="post" action="/">
     <label>Search Movie</label>
     <input type="text" id="txtMovie" name="searchMovie">
     <br>
     <input type="submit" id="submitbtn" value="Submit">
   </form>
 
-  <form method="post" action="/movies/search/description">
+  <form method="post" action="/description/">
     <label>Description</label>
     <input type="text" id="txtDescription" name="descriptionMovie">
     <br>
     <input type="submit" value="Submit">
   </form>
 
-  <form method="post" action="/movies/search/description/person">
+  <form method="post" action="/person/">
     <label>Person Description</label>
     <input type="text" id="txtDescriptionPerson" name="searchPerson">
     <br>
@@ -130,7 +130,7 @@
           <%= desPerson.title %>
         </td>
         <td>
-            <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie.title %>.jpg">
+            <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= desPerson.title %>.jpg">
         </td>
         <td>
           <%= desPerson.tagline %>
