--- a/views/main.ejs
+++ b/views/main.ejs
@@ -89,7 +89,7 @@
         <td rowspan=".3">
           <form><button><i class="fa fa-thumbs-up" style="font-size:20px;color:green"></i></button></form>
           <form method="post" action="/movies/clickWatch">
-            <button onclick="" value="<%= movie.title %>" name="inputClickWatch"> Watch </button>
+            <button onclick="" value="<%= movie.title %>" name="inputClickWatch"><i class="fa fa-play" style="font-size:25px"></i></button>
           </form>
           <form><button><i class="fa fa-thumbs-down" style="font-size:20px;color:red"></i></button></form>
         </td>
