--- a/views/person.ejs
+++ b/views/person.ejs
@@ -142,7 +142,7 @@
           <form><button><i class="fa fa-thumbs-up" style="font-size:20px;color:green"></i></button></form>
           <form method="post" action="/movies/clickWatch">
             <button onclick="alert('You have watched: ' + '<%= desPerson.title %>')" value="<%= desPerson.title %>" name="inputClickWatch">
-            Watch </button>
+            <i class="fa fa-play" style="font-size:25px"></i></button>
           </form>
           <form><button><i class="fa fa-thumbs-down" style="font-size:20px;color:red"></i></button></form>
         </td>
