--- a/views/description.ejs
+++ b/views/description.ejs
@@ -74,7 +74,7 @@
 
 <body>
   <!-- <div class="jumbotron text-center"> -->
-  <h1 id="h1">Movies
+  <h1 id="h1"><a href="/">Movie</a>
     <a href="/profile" class="btn btn-danger">
       <span class="fa fa-gear"></span>
       <object align="right" style="font-size:20px">Profile</object>
