--- a/views/main.ejs
+++ b/views/main.ejs
@@ -46,7 +46,7 @@
 
 <body>
 
-  <h1 id="h1">Movies
+  <h1 id="h1"><a href="/">Movie</a>
     <a href="/sociallogin" class="btn btn-danger">
       <object align="right" style="font-size:20px">Login</object>
     </a>
