--- a/views/person.ejs
+++ b/views/person.ejs
@@ -76,7 +76,7 @@
 
 <body>
   <!-- <div class="jumbotron text-center"> -->
-  <h1 id="h1">Movies
+  <h1 id="h1"><a href="/">Movie</a>
     <a href="/profile" class="btn btn-danger">
       <object align="right" style="font-size:20px">Profile</object>
     </a>
