--- a/views/graphVis.ejs
+++ b/views/graphVis.ejs
@@ -12,7 +12,7 @@
         <script src="https://rawgit.com/neo4j-contrib/neovis.js/master/dist/neovis.js"></script>
     </head>
     <h1 id="h1">Movies Graph Visualization
-        <a href="/movies" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px">Back</object></a>
+        <a href="/" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px">Back</object></a>
         <a href="/profile" class="btn btn-danger"><span class="fa fa-gear"></span><object align="right" style="font-size:20px; margin-right:15px">Profile</object></a>
     </h1>
     <script>
