--- a/views/main.ejs
+++ b/views/main.ejs
@@ -26,7 +26,9 @@
     text-align: center;
     font-size: 300%;
   }
-
+  #h2 {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  }
   #table1 {
     
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -107,6 +109,7 @@
   </form>
 
 <div id="div1" >
+  <h2 id="h2">Movie List</h2>
   <table id="table1" style="border-style:double;">
     <tr>
       <th>Movie</td>
@@ -145,6 +148,7 @@
 
 
 <div id="div2">
+  <h2 id="h2">Recommendation List</h2>
   <table id="table2">
     <tr>
       <th>Movie</td>
