Added functionality to the Like and Dislike buttons

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -134,11 +134,17 @@
         <%= movie.released %>
       </td>
       <td rowspan=".3">
-        <form><button><i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i></button></form>
-        <form method="post" action="/user">
-          <button onclick="" value="<%= movie.title %>" name="inputClickWatch"><i class="fa fa-play" style="font-size:25px"></i></button>
-        </form>
-        <form><button><i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i></button></form>
+        <% if (valid) { %>
+          <form method="post" action="/prefer">
+            <button value="1 <%= movie.title %>" name="like"><i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i></button>
+          </form>
+          <form method="post" action="/user">
+            <button onclick="alert('You have watched: ' + '<%= movie.title %>')" value="<%= movie.title %>" name="inputClickWatch"><i class="fa fa-play" style="font-size:25px"></i></button>
+          </form>
+          <form method="post" action="/prefer">
+            <button value="-1<%= movie.title %>" name="like"><i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i></button>
+          </form>
+        <% } %>
       </td>
     </tr>
   <% }) %>
@@ -173,11 +179,15 @@
         <%= movie.released %>
        </td>
        <td rowspan=".3">
-        <form><button><i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i></button></form>
+        <form method="post" action="/prefer">
+          <button value="1 <%= movie.title %>" name="like"><i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i></button>
+        </form>
         <form method="post" action="/user">
           <button onclick="" value="<%= movie.title %>" name="inputClickWatch"><i class="fa fa-play" style="font-size:25px"></i></button>
         </form>
-        <form><button><i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i></button></form>
+        <form method="post" action="/prefer">
+          <button value="-1<%= movie.title %>" name="like"><i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i></button>
+        </form>
       </td>
       </tr>
       <% }) %>
