--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,18 +12,23 @@
     body {
       padding-top: 80px;
     }
+
+    .grid {
+      display: grid;
+      /* define the number of grid columns */
+      /* grid-template-columns: repeat( auto-fit, minmax(250px, 1fr)); */
+      grid-template-columns: 1fr 1fr 1fr
+    }
   </style>
 </head>
 
 <body>
-  <div class="container">
-
+  <div class="grid-container grid-container--fit">
     <div class="jumbotron text-center">
       <h1>
         <span class="fa fa-magic"></span> Neo4j visualization Login</h1>
       <br>
       <p>Login with:</p>
-
       <a href="/login" class="btn btn-default">
         <span class="fa fa-user"></span> Local Login</a>
       <a href="/auth/google" class="btn btn-danger">
