--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <!-- ./views/index.ejs -->
 <!doctype html>
 <html>
-
 <head>
   <title>Neo4j visualization Login</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
@@ -12,7 +11,6 @@
     body {
       padding-top: 80px;
     }
-
     .grid {
       display: grid;
       /* define the number of grid columns */
@@ -21,7 +19,6 @@
     }
   </style>
 </head>
-
 <body>
   <div class="grid-container grid-container--fit">
     <div class="jumbotron text-center">
@@ -40,6 +37,8 @@
         <span class="fa fa-user"></span> Local Signup</a>
     </div>
   </div>
+  <footer class="container-fluid text-center">
+    <p>Copyright &copy 2003-2018 MOS. All rights reserved.</p>
+  </footer>
 </body>
-
 </html>
