--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -82,6 +82,9 @@
         <a href="/">Movie Search</a>.</p>
     </div>
   </div>
+  <footer class="container-fluid text-center">
+    <p>Copyright &copy 2003-2018 MOS. All rights reserved.</p>
+  </footer>
 </body>
 
 </html>
