--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -53,6 +53,9 @@
             <a href="/">home</a>.</p>
     </div>
   </div>
+  <footer class="container-fluid text-center">
+    <p>Copyright &copy 2003-2018 MOS. All rights reserved.</p>
+  </footer>
 </body>
 
 </html>
