--- a/views/search.ejs
+++ b/views/search.ejs
@@ -103,6 +103,7 @@
             <table class="table table-hover">
               <tr>
                 <th>Movie</th>
+                <th>Poster</th>
                 <th>Tagline</th>
                 <th>Released</th>
                 <th>Watch</th>
