--- a/views/graphVis.ejs
+++ b/views/graphVis.ejs
@@ -40,7 +40,7 @@
   </style>
   <script src="https://rawgit.com/neo4j-contrib/neovis.js/master/dist/neovis.js"></script>
 </head>
-<body onload = "draw()">
+<body>
 
 <div class="container-fluid">
   <div class="row content">
@@ -48,17 +48,14 @@
       <h4>Movies</h4>
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="#section2">Movie</a></li>
-        <li><a href="#section3">User</a></li>
-        <li><a href="#section3">Actor</a></li>
+        <li onclick="draw()"><a>Thickness (관계의 두께)</a></li>
+        <li onclick="draw1()"><a>Node Size (노드 크기)</a></li>
+        <li onclick="draw2()"><a>Community (색 구분)</a></li>
       </ul>
     </div>
 
     <div class="col-sm-9" id="viz">
     </div>
-
-
-
   </div>
 </div>
 
@@ -94,6 +91,73 @@ function draw() {
     viz.render();
   }
 
+function draw1() {
+    var config = {
+      container_id: "viz",
+      server_url: "bolt://54.85.95.124:33762",
+      server_user: "neo4j",
+      server_password: "sling-cleansers-tugs",
+      labels: {
+        "Actor": {
+          caption: "name"   
+        },
+        "Movie": {
+          caption: "title",
+          size: "imdbVotes"
+        }
+      },
+
+      relationships: {
+        "ACTED_IN":{
+          caption: true
+        }
+      },
+      initial_cypher: "MATCH p=(n:Movie)-[:IN_GENRE]->() RETURN p LIMIT 100"
+    }
+
+    var viz = new NeoVis.default(config);
+    viz.render();
+  }
+
+  function draw2() {
+    var config = {
+      container_id: "viz",
+      server_url: "bolt://54.85.95.124:33762",
+      server_user: "neo4j",
+      server_password: "sling-cleansers-tugs",
+      labels: {
+        "Movie": {
+          caption: "title",
+          size: "imdbVotes",
+          community: "community"
+        },
+        "GENRE": {
+          caption: "name"  
+        }
+      },
+
+      relationships: {
+        "IN_GENRE":{
+          caption: true
+        }
+      },
+      initial_cypher: "MATCH p=(n:Movie)-[:IN_GENRE]->() RETURN p LIMIT 100"
+    }
+    
+    var viz1 = new NeoVis.default(config);
+    viz1.render();
+  }
+</script>
+<script>
+  $('#section2').on('click', function (e) {
+    $('#viz').load('graphVis.ejs');
+  });
+  $('#section3').on('click', function (e) {
+    $('#viz').load('nodeSizeVis.ejs');
+  });
+  $('#section4').on('click', function (e) {
+    $('#viz').load('diffColorVis.ejs');
+  });
 </script>
 </body>
 </html>
