--- a/views/person.ejs
+++ b/views/person.ejs
@@ -120,7 +120,11 @@
                     <%= desPerson.title %>
                   </td>
                   <td>
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= desPerson.title %>.jpg">
+                    <% if (movie.title == "Frost/Nixon") { %>
+                      <img height="100" width="70" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/Frost:Nixon.jpg?raw=true'>
+                      <% } else { %>
+                        <img height="100" width="70" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= desPerson.title %>.jpg?raw=true'>
+                        <% } %>
                   </td>
                   <td>
                     <%= desPerson.tagline %>
@@ -132,7 +136,7 @@
                     <% if (valid) { %>
                       <form method="post" action="/prefer">
                         <button value="1 <%= desPerson.title %>" name="like">
-                          <i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i>
+                          <i class="fa fa-thumbs-o-up" style="font-size:22.5px;color:blue"></i>
                         </button>
                       </form>
                       <form method="post" action="/user">
@@ -142,7 +146,7 @@
                       </form>
                       <form method="post" action="/prefer">
                         <button value="-1<%= desPerson.title %>" name="like">
-                          <i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i>
+                          <i class="fa fa-thumbs-o-down" style="font-size:22.5px;color:red"></i>
                         </button>
                       </form>
                       <% } %>
