--- a/views/person.ejs
+++ b/views/person.ejs
@@ -120,7 +120,7 @@
                     <%= desPerson.title %>
                   </td>
                   <td>
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= desPerson.title %>.jpg">
+                    <img height="120" width="80" src="https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= desPerson.title %>.jpg?raw=true">
                   </td>
                   <td>
                     <%= desPerson.tagline %>
