--- a/views/search.ejs
+++ b/views/search.ejs
@@ -87,7 +87,7 @@
               <% } %>
                 <li>
                   <a href="/visualization">
-                    <span class="glyphicon glyphicon-align-left"></span> Graph</a>
+                    <span class="glyphicon glyphicon-align-left"></span> Graph </a>
                 </li>
         </ul>
       </div>
@@ -114,7 +114,7 @@
                     <%= search.title %>
                   </td>
                   <td>
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= search.title %>.jpg">
+                    <img height="120" width="80" src="https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= search.title %>.jpg?raw=true">
                   </td>
                   <td>
                     <%= search.tagline %>
