Fixed minor error

--- a/views/person.ejs
+++ b/views/person.ejs
@@ -120,7 +120,7 @@
                     <%= desPerson.title %>
                   </td>
                   <td>
-                    <% if (movie.title == "Frost/Nixon") { %>
+                    <% if (desPerson.title == "Frost/Nixon") { %>
                       <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'>
                     <% } else { %>
                       <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= desPerson.title %>.jpg'>
