--- a/views/search.ejs
+++ b/views/search.ejs
@@ -114,7 +114,7 @@
                     <%= search.title %>
                   </td>
                   <td>
-                    <% if (movie.title == "Frost/Nixon") { %>
+                    <% if (search.title == "Frost/Nixon") { %>
                       <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'>
                     <% } else { %>
                       <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= search.title %>.jpg'>
