--- a/views/test.ejs
+++ b/views/test.ejs
@@ -56,27 +56,19 @@
     <% movies.forEach(function(movie1){ %>
       <div class="col-sm-3"style="height:500px" >
         <div class="panel panel-primary">
-         <div class="panel-heading"> <%= movie1.title %></div>
-         <div style="text-align:center" class="panel-body">
-         <%= movie1.tagline %>
-         </div>
-         <div class="panel-body">
-         <img style="height:320px" src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie1.title %>.jpg" ></div>    
+         <div class="panel-heading" align="center"> <%= movie1.title %></div>
+         <div class="panel-body" align="center">
+            <% if (movie1.title == "Frost/Nixon") { %>
+              <img height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'>
+            <% } else { %>
+              <img height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie1.title %>.jpg'>
+            <% } %>
+        </div>    
          
          </div>
       </div>
     <% }) %> 
   </div>
 </div>
-
-
-<footer class="container-fluid text-center">
-  <p>Online Store Copyright</p>  
-  <form class="form-inline">Get deals:
-    <input type="email" class="form-control" size="50" placeholder="Email Address">
-    <button type="button" class="btn btn-danger">Sign Up</button>
-  </form>
-</footer>
-
 </body>
 </html>
