readme.md 업데이트 및 이미지 파일 불러오는 path 수정

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -108,9 +108,9 @@
                   </td>
                   <td>
                     <% if (movie.title == "Frost/Nixon") { %>
-                      <img height="120" width="80" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/Frost:Nixon.jpg?raw=true'>
+                      <img height="120" width="80" src='/images/Frost:Nixon.jpg?raw=true'>
                     <% } else { %>
-                      <img height="120" width="80" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= movie.title %>.jpg?raw=true'>
+                      <img height="120" width="80" src='/images/<%= movie.title %>.jpg'>
                     <% } %>
                   </td>
                   <td>
